// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CalendarDay /> renders correctly 1`] = `
<CalendarDay__DayWrapper
  blacklist={
    Array [
      "display",
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
      "width",
      "w",
      "minWidth",
      "maxWidth",
      "height",
      "minHeight",
      "maxHeight",
      "color",
      "bg",
      "textAlign",
      "align",
      "boxShadow",
      "borderRadius",
      "border",
      "borderTop",
      "borderRight",
      "borderBottom",
      "borderLeft",
      "borderColor",
      "flexBasis",
      "flex",
      "position",
      "zIndex",
      "selected",
      "selectable",
    ]
  }
  selected={true}
>
  <CalendarDay__Button
    blacklist={
      Array [
        "verticalAlign",
        "m",
        "mt",
        "mr",
        "mb",
        "ml",
        "mx",
        "my",
        "p",
        "pt",
        "pr",
        "pb",
        "pl",
        "px",
        "py",
        "color",
        "bg",
        "selectable",
        "highlighted",
      ]
    }
    disabled={false}
    highlighted={false}
    is="button"
    selectable={true}
    selected={true}
  >
    21
  </CalendarDay__Button>
</CalendarDay__DayWrapper>
`;

exports[`<CalendarEmptyDay /> renders correctly 1`] = `
.c0 {
  border-color: transparent;
}

<CalendarDay__DayWrapper
  blacklist={
    Array [
      "display",
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
      "width",
      "w",
      "minWidth",
      "maxWidth",
      "height",
      "minHeight",
      "maxHeight",
      "color",
      "bg",
      "textAlign",
      "align",
      "boxShadow",
      "borderRadius",
      "border",
      "borderTop",
      "borderRight",
      "borderBottom",
      "borderLeft",
      "borderColor",
      "flexBasis",
      "flex",
      "position",
      "zIndex",
      "selected",
      "selectable",
    ]
  }
  className="c0"
>
  15
</CalendarDay__DayWrapper>
`;
